# SDP-Project-Q2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  print tests results.sh  pseudo_code.txt  sonar-project.properties  timing runner.sh
.github/workflows/: build.yaml
TESTS/1/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/10/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/2/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/3/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/4/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/5/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/6/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/7/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  time_reading-A.txt  time_reading-B.txt  time_reading-C.txt  time_sequential-A.txt  time_sequential-B.txt  time_sequential-C.txt
TESTS/8/: read_test_Graph-A.csv  read_test_Graph-B.csv  read_test_Graph-C.csv  seq_test_Graph-A.csv  seq_test_Graph-B.csv  seq_test_Graph-C.csv  (+6 more)
delivery_documents/: README.txt
delivery_informations/: DOCUMENTATION.md  OVERHEAD.txt  README.txt
documents/: algorithms.md
src/: Change.cpp  Change.h  Graph.cpp  Graph.h  Node.cpp  Node.h  clusterCutSize.cpp  clusterCutSize.h  coarsening.cpp  graph.h  kernighanLin.cpp  loader.cpp  main  main.cpp  menu.cpp  mmap_loader.cpp  node.h  output.cpp  parallel_coarsening.cpp  parallel_kernighanLin.cpp  parallel_loader.cpp  parallel_partitioning.cpp  partitioning.cpp  partitioning.h  partitioning_algorithms.cpp  partitioning_algorithms.h  sequential_benchmark.cpp  sequential_coarsening.cpp  sequential_loader.cpp  sequential_partitioning.cpp  testColoring.cpp
testing-results/: sdp_graph-A.xlsx  sdp_graph-B.xlsx  sdp_graph-C.xlsx  test_image_creator.py  testingResultsGenerator.py
(+535 files in other folders)
